--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "ME314: Assignment 5"
-description: "Classification"
+title: "ME314: Mid-term/Assignment 5"
+description: "Mid-term exam for MSE314 2019"
 show_downloads: false
 theme: jekyll-theme-cayman
